B-F Backup Sandbox 30.4.12/src/objects/Depletion__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Depletions</relationshipLabel>
        <relationshipName>Depletions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bottles__c</fullName>
        <description>Infowelders</description>
        <label>Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Custom_Product__r.Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for Product Remediation process</description>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Depletions</relationshipLabel>
        <relationshipName>Depletions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month_Of_Date__c</fullName>
        <description>Infowelders</description>
        <label>Month Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nine_L_Case__c</fullName>
        <formula>ROUND(Custom_Product__r.Case_Multiplier__c * Bottles__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is calculated by multiplying the Bottles by the Product -&gt; Case Multiplier field.</inlineHelpText>
        <label>9L Case</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Depletions</relationshipLabel>
        <relationshipName>Depletions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Depletion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Bottles__c</columns>
        <columns>Month_Of_Date__c</columns>
        <columns>Custom_Product__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Taiwan_Depletion</fullName>
        <columns>Brand__c</columns>
        <columns>Custom_Product__c</columns>
        <columns>Account__c</columns>
        <columns>Bottles__c</columns>
        <columns>Month_Of_Date__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>TWD</value>
        </filters>
        <label>Taiwan Depletion</label>
        <language>en_US</language>
        <sharedTo>
            <group>TWN-all users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Taiwan_Shipment</fullName>
        <columns>Brand__c</columns>
        <columns>Custom_Product__c</columns>
        <columns>Account__c</columns>
        <columns>Bottles__c</columns>
        <columns>Month_Of_Date__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>TWD</value>
        </filters>
        <label>Taiwan Shipment</label>
        <language>en_US</language>
        <sharedTo>
            <group>TWN-all users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DEP-{YYYY}{000000}</displayFormat>
        <label>Depletion #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depletions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>